[gd_scene load_steps=11 format=3 uid="uid://b61v8vn8s1ivd"]

[ext_resource type="Texture2D" uid="uid://bmk6re0t07gdv" path="res://Assets/level_5.png" id="1_eipvx"]
[ext_resource type="Script" path="res://Scripts/level_5.gd" id="1_imllb"]
[ext_resource type="PackedScene" uid="uid://cqyialgd2eca8" path="res://Scenes/stabillizer.tscn" id="2_0goi8"]
[ext_resource type="PackedScene" uid="uid://bvwuk2wv4ig65" path="res://Scenes/level_finish.tscn" id="3_0p0at"]
[ext_resource type="PackedScene" uid="uid://1045u2o5op2" path="res://Player/bomb_player.tscn" id="4_pee18"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="5_ds7el"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_i1ug0"]
polygon = PackedVector2Array(168, 898, 167.5, 335.5, 572.5, 331, 625.5, 208, 724, 95.5, 872.5, 19.5, 1021.5, 5.5, 1161, 35, 1279.5, 106.5, 1376.5, 211.5, 1429.5, 338.5, 1437, 395.5, 1767.5, 397, 1793.5, 271, 1866.5, 146.5, 2024.5, 33, 2161.5, 9.5, 2306.5, 19.5, 2467.5, 102.5, 2576.5, 244.5, 2612, 384.5, 2837.5, 386, 2838, 316, 3075, 315.5, 3078, 578.5, 2838, 578.5, 2838, 528.5, 2605, 528.5, 2570.5, 624, 2509.5, 720.5, 2396.5, 811, 2226, 868.5, 2029, 836.5, 1890.5, 740.5, 1790.5, 605, 1772, 521, 1433.5, 520.5, 1378, 707, 1229.5, 826, 1105.5, 877, 958.5, 890, 871.5, 868, 736.5, 810.5, 643, 704.5, 586, 608, 557, 462, 278, 460.5, 287, 898.5, 3196.5, 901, 3193, 9, 12, 9, 9, 895)

[sub_resource type="CircleShape2D" id="CircleShape2D_rbe3g"]
radius = 997.056

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kb8wk"]
size = Vector2(24.25, 300)

[sub_resource type="BoxMesh" id="BoxMesh_jfrxy"]

[node name="Level_5" type="Node2D"]
script = ExtResource("1_imllb")

[node name="Level5" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_eipvx")
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="Level5"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level5/StaticBody2D"]
polygon = PackedVector2Array(168, 898, 167.5, 335.5, 572.5, 331, 625.5, 208, 724, 95.5, 872.5, 19.5, 1021.5, 5.5, 1161, 35, 1279.5, 106.5, 1376.5, 211.5, 1429.5, 338.5, 1437, 395.5, 1767.5, 397, 1793.5, 271, 1866.5, 146.5, 2024.5, 33, 2161.5, 9.5, 2306.5, 19.5, 2467.5, 102.5, 2576.5, 244.5, 2612, 384.5, 2837.5, 386, 2838, 316, 3075, 315.5, 3078, 578.5, 2838, 578.5, 2838, 528.5, 2605, 528.5, 2570.5, 624, 2509.5, 720.5, 2396.5, 811, 2226, 868.5, 2029, 836.5, 1890.5, 740.5, 1790.5, 605, 1772, 521, 1433.5, 520.5, 1378, 707, 1229.5, 826, 1105.5, 877, 958.5, 890, 871.5, 868, 736.5, 810.5, 643, 704.5, 586, 608, 557, 462, 278, 460.5, 287, 898.5, 3196.5, 901, 3193, 9, 12, 9, 9, 895)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Level5"]
occluder = SubResource("OccluderPolygon2D_i1ug0")

[node name="Level_Finish" parent="." instance=ExtResource("3_0p0at")]
position = Vector2(6069, 916)
nextLvl = "1"

[node name="Motor1" type="Node2D" parent="."]
position = Vector2(1980, 878)
rotation = 3.13446

[node name="Stabillizer" parent="Motor1" instance=ExtResource("2_0goi8")]
position = Vector2(0, 500)
sizeOut = 600
sizeIn = 4

[node name="Stabillizer2" parent="Motor1" instance=ExtResource("2_0goi8")]
position = Vector2(0, -500)
sizeOut = 600
sizeIn = 4

[node name="Motor2" type="Node2D" parent="."]
position = Vector2(4370, 848)

[node name="Stabillizer" parent="Motor2" instance=ExtResource("2_0goi8")]
position = Vector2(0, 216)
sizeOut = 1200
sizeIn = 4

[node name="BombPlayer" parent="." instance=ExtResource("4_pee18")]
position = Vector2(451, 1290)

[node name="Camera2D" type="Camera2D" parent="BombPlayer"]
limit_left = 0
limit_top = 0
limit_right = 6400
limit_bottom = 1800
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("5_ds7el")

[node name="CamZoomOut" type="Area2D" parent="."]
position = Vector2(3196, 916)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CamZoomOut"]
position = Vector2(-1295, -34)
shape = SubResource("CircleShape2D_rbe3g")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CamZoomOut"]
position = Vector2(1177, -23)
shape = SubResource("CircleShape2D_rbe3g")

[node name="BulletWall" type="Area2D" parent="."]

[node name="Wall1" type="CollisionShape2D" parent="BulletWall"]
position = Vector2(2893.88, 915)
shape = SubResource("RectangleShape2D_kb8wk")

[node name="MeshInstance2D" type="MeshInstance2D" parent="BulletWall/Wall1"]
modulate = Color(0.145098, 0.0862745, 0.537255, 0.423529)
position = Vector2(0.125, -1)
scale = Vector2(22.0002, 244)
mesh = SubResource("BoxMesh_jfrxy")

[node name="Wall2" type="CollisionShape2D" parent="BulletWall"]
position = Vector2(3502, 915)
shape = SubResource("RectangleShape2D_kb8wk")

[node name="MeshInstance2D" type="MeshInstance2D" parent="BulletWall/Wall2"]
modulate = Color(0.145098, 0.0862745, 0.537255, 0.423529)
position = Vector2(0.125, -1)
scale = Vector2(22.0002, 244)
mesh = SubResource("BoxMesh_jfrxy")

[node name="Wall3" type="CollisionShape2D" parent="BulletWall"]
position = Vector2(1086, 802)
shape = SubResource("RectangleShape2D_kb8wk")

[node name="MeshInstance2D" type="MeshInstance2D" parent="BulletWall/Wall3"]
modulate = Color(0.145098, 0.0862745, 0.537255, 0.423529)
position = Vector2(0.125, -1)
scale = Vector2(22.0002, 244)
mesh = SubResource("BoxMesh_jfrxy")

[node name="Wall4" type="CollisionShape2D" parent="BulletWall"]
position = Vector2(5286, 907)
shape = SubResource("RectangleShape2D_kb8wk")

[node name="MeshInstance2D" type="MeshInstance2D" parent="BulletWall/Wall4"]
modulate = Color(0.145098, 0.0862745, 0.537255, 0.423529)
position = Vector2(0.125, 3.49998)
scale = Vector2(22.0002, 281)
mesh = SubResource("BoxMesh_jfrxy")

[connection signal="body_entered" from="CamZoomOut" to="." method="_on_cam_zoom_out_body_entered"]
[connection signal="body_exited" from="CamZoomOut" to="." method="_on_cam_zoom_out_body_exited"]
[connection signal="area_entered" from="BulletWall" to="." method="_on_bullet_wall_area_entered"]
